--- a/example/build.gradle
+++ b/example/build.gradle
@@ -9,6 +9,11 @@ android {
         checkReleaseBuilds false
         abortOnError false
     }
+    buildFeatures {
+//        dataBinding = true
+//        for view binding :
+        viewBinding = true
+    }
     defaultConfig {
         applicationId "com.lax.example"
         minSdkVersion 17
@@ -103,10 +108,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.squareup.okhttp3:okhttp:4.4.0")
 
-    implementation project(path: ':easyweb')
+//    implementation project(path: ':easyweb')
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
-//    implementation 'com.lax.ezweb:easyweb-fcm:0.1.3'
+    implementation 'com.lax.ezweb:easyweb-fcm:0.1.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
