--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:value="${FACEBOOK_APP_ID}" />
 
         <provider
             android:name="com.facebook.FacebookContentProvider"
@@ -68,7 +68,6 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -77,21 +76,17 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="fb${FACEBOOK_APP_ID}" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
 
-        <provider
-            android:name="com.lax.ezweb.EzWebInitProvider"
-            android:authorities="${applicationId}.ezwebprovider"
-            android:exported="false" />
-
         <activity
-            android:name=".SplashActivity"
+            android:name="com.lax.example.SplashActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
@@ -122,5 +117,9 @@
             </intent-filter>
         </activity>
 
+        <provider
+            android:name="com.lax.ezweb.EzWebInitProvider"
+            android:authorities="${applicationId}.ezwebprovider"
+            android:exported="false" />
     </application>
 </manifest>
