--- a/example/build.gradle
+++ b/example/build.gradle
@@ -103,13 +103,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
 
-//    implementation project(path: ':library')
+    implementation project(path: ':library')
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.5.0'
-    implementation 'com.lax.ezweb:easyweb-fcm:0.1.8'
-    implementation 'com.just.agentweb:agentweb-androidx:4.1.4' // (必选)
-    implementation 'com.just.agentweb:filechooser-androidx:4.1.4'// (可选)
-    implementation 'com.download.library:downloader-androidx:4.1.4'// (可选)
+//    implementation 'com.lax.ezweb:easyweb-fcm:0.1.8'
 }
 
 apply plugin: 'com.google.gms.google-services'
