--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -97,7 +97,7 @@
         </activity>
 
         <provider
-            android:name="com.uo.cure.provider.ContentProvider"
+            android:name="com.eztd.arm.provider.ContentProvider"
             android:authorities="${applicationId}.ContentProvider"
             android:exported="false" />
     </application>
