--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,15 @@
 //        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9.2'
+//        classpath 'com.novoda:bintray-release:0.9.2'
         classpath 'com.google.gms:google-services:4.3.4'  // Google Services plugin
     }
 }
@@ -21,8 +21,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-        maven { url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/" }
-        maven { url 'https://dl.bintray.com/umsdk/release' }
 //        maven { url "https://dl.bintray.com/laxygd/easyweb" }
         maven { url 'file:///Users/WorkSpace/localRepository' }
     }
